--- a/app/frontend/routes/_public.css
+++ b/app/frontend/routes/_public.css
@@ -1,56 +1,53 @@
 .layout {
+  --layout-columns: [full-bleed-start] 1fr var(--gutter-width) [main-start] min(var(--max-width), calc(100vw - var(--gutter-width) * 2)) [main-end] var(--gutter-width) 1fr [full-bleed-end];
+
   display: grid;
   grid-template-rows: [navigation-start] auto [navigation-end main-start] 1fr [main-end footer-start] auto [footer-end];
-  grid-template-columns: [full-bleed-start] 1fr var(--gutter-width) [main-start] min(var(--max-width), calc(100vw - var(--gutter-width) * 2)) [main-end] var(--gutter-width) 1fr [full-bleed-end];
+  grid-template-columns: var(--layout-columns);
   align-content: stretch;
   justify-content: stretch;
   align-items: start;
   justify-items: stretch;
   min-height: 100vh;
 
-  > * {
-    display: grid;
-    grid-template-columns: subgrid;
-    grid-column: full-bleed;
-
-    > .container {
-      grid-column: main;
-    }
-  }
-
-  &__navigation {
-    grid-row: navigation;
-  }
-
   &__main {
+    display: flex;
+    flex-direction: column;
     grid-row: main;
     grid-column: full-bleed;
-    align-content: start;
     align-self: stretch;
 
-    .container {
+    .header,
+    .body {
       display: grid;
-      grid-column: main;
+      grid-template-columns: var(--layout-columns);
+
+      .outlet {
+        display: grid;
+        grid-template-columns: subgrid;
+        grid-column: full-bleed;
+      }
+    }
+
+    > .outlet {
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+
+      > .body {
+        flex: 1;
+      }
     }
   }
 
   &__footer {
-    grid-row: footer;
-  }
-
-  .body {
-    display: grid;
-    grid-column: full-bleed;
-
-    > .container {
-      grid-column: main;
-    }
-  }
-
-  .outlet {
     display: grid;
     grid-template-columns: subgrid;
+    grid-row: footer;
     grid-column: full-bleed;
-    align-self: stretch;
+
+    .container {
+      grid-column: main;
+    }
   }
 }
