--- a/app/frontend/components/organisms/ActivityList/ActivityList.css
+++ b/app/frontend/components/organisms/ActivityList/ActivityList.css
@@ -1,24 +1,44 @@
-.body,
-.mantine-Container-root {
-  display: grid;
-  grid-template-columns: subgrid;
-}
-
-.mantine-Container-root {
-  grid-column: full-bleed;
-}
-
 .activity-list {
-  display: grid;
-  grid-template-columns: subgrid;
-  container-type: inline-sizing;
+  &__day {
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-column: full-bleed;
+
+    &-header {
+      position: sticky;
+      top: 0;
+      z-index: var(--z-index-sticky);
+      display: grid;
+      grid-template-columns: subgrid;
+      grid-column: full-bleed;
+      padding: var(--spacing-large) 0 var(--spacing-small);
+      background-color: var(--background-translucent);
+      backdrop-filter: blur(6px);
+    }
+  }
+
+  &__date,
+  &__time {
+    grid-row: 1;
+    grid-column: main;
+    align-self: baseline;
+    font-size: var(--font-size-xl);
+    line-height: var(--line-height-xl);
+  }
+
+  &__time {
+    justify-self: end;
+    color: var(--text-subtle);
+    font-size: var(--font-size-large);
+    line-height: var(--line-height-large);
+  }
 
   &__activities {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     grid-column: main;
     grid-gap: var(--spacing-base);
-    min-height: 25vh;
+    padding-block: var(--spacing-base);
   }
 }
 
@@ -30,12 +50,12 @@
     "presenters" auto
     / 1fr;
   overflow: hidden;
-  border-radius: var(--radius-small);
-  box-shadow: var(--shadow-medium), inset 0 0 0 1px var(--border-subtle);
 
   .card__picture {
     display: grid;
     grid-area: picture;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
     aspect-ratio: 16 / 9;
     mix-blend-mode: var(--blend-mode);
   }
