--- a/app/frontend/components/organisms/Header/Header.css
+++ b/app/frontend/components/organisms/Header/Header.css
@@ -91,6 +91,10 @@
       mix-blend-mode: var(--header-image-blend-mode);
     }
   }
+
+  .mantine-Skeleton-root {
+    mix-blend-mode: var(--blend-mode);
+  }
 }
 
 .breadcrumbs {
