--- a/app/frontend/components/organisms/TimetableEditor/TimetableEditor.css
+++ b/app/frontend/components/organisms/TimetableEditor/TimetableEditor.css
@@ -159,6 +159,7 @@
       }
     }
 
+
     &__content {
       position: absolute;
       inset: 1px 2px 2px 1px;
@@ -180,6 +181,12 @@
           font-size: var(--font-size-tiny);
           line-height: var(--line-height-tiny);
         }
+      }
+
+      [data-empty] > & {
+        border-style: dashed;
+        background-color: var(--background-subtle);
+        background-image: repeating-linear-gradient(-45deg, transparent 0 0.25rem, var(--background-light) 0 0.5rem);
       }
     }
 
