--- a/app/frontend/styles/new/variables.css
+++ b/app/frontend/styles/new/variables.css
@@ -308,6 +308,7 @@ body,
   --background-solid: var(--neutral-9);
   --background-light: var(--neutral-3);
   --background-light-hover: var(--neutral-4);
+  --background-subtle: var(--neutral-2);
   --button-ghost-icon: var(--icon);
   --button-ghost-text: var(--text-default);
   --button-outline-border: var(--border-element);
@@ -332,6 +333,7 @@ body,
   --background-solid: var(--magenta-9);
   --background-light: var(--magenta-3);
   --background-light-hover: var(--magenta-4);
+  --background-subtle: var(--magenta-2);
   --button-ghost-icon: var(--magenta-11);
   --button-ghost-text: var(--magenta-12);
   --button-outline-border: var(--magenta-alpha-7);
@@ -358,6 +360,7 @@ body,
   --background-solid: var(--cyan-9);
   --background-light: var(--cyan-3);
   --background-light-hover: var(--cyan-4);
+  --background-subtle: var(--cyan-2);
   --button-ghost-icon: var(--cyan-11);
   --button-ghost-text: var(--cyan-12);
   --button-outline-border: var(--cyan-alpha-7);
@@ -387,6 +390,7 @@ body,
   --background-solid: var(--yellow-9);
   --background-light: var(--yellow-3);
   --background-light-hover: var(--yellow-4);
+  --background-subtle: var(--yellow-2);
   --button-ghost-icon: var(--yellow-11);
   --button-ghost-text: var(--yellow-12);
   --button-outline-border: var(--yellow-alpha-7);
