add presenters to activities

--- a/app/frontend/components/pages/admin/ActivityEditor/ActivityEditor.css
+++ b/app/frontend/components/pages/admin/ActivityEditor/ActivityEditor.css
@@ -38,7 +38,11 @@
   }
 
   &__edit {
+    display: grid;
     grid-column: main;
+    row-gap: var(--spacing-large);
+    max-width: 60rem;
+    padding-block: var(--spacing-large);
   }
 }
 
