--- a/app/frontend/components/organisms/Editor/Editor.css
+++ b/app/frontend/components/organisms/Editor/Editor.css
@@ -6,6 +6,8 @@
   display: grid;
   grid-template-rows: auto 1fr;
   row-gap: var(--spacing-small);
+  border: var(--border-thin) solid var(--border-input);
+  border-radius: var(--radius-small);
   color: var(--text-default);
   font-size: var(--font-size-medium);
   line-height: var(--line-height-medium);
@@ -14,26 +16,43 @@
     display: flex;
     gap: var(--spacing-small);
     align-items: center;
+    padding: var(--spacing-tiny);
+    border-bottom: var(--border-thin) solid var(--border-input);
+    border-radius: var(--radius-inside-small) var(--radius-inside-small) 0 0;
+    background: var(--background-subtle);
 
     .mantine-ActionIcon-root {
       --radius-round: var(--radius-small);
 
       &[aria-pressed="true"] {
         --button-background: var(--button-background-hover);
+
+        background-color: var(--background-element-hover);
+      }
+
+      &:hover {
+        color: var(--text-default);
+      }
+
+      &:disabled {
+        background-color: transparent;
       }
     }
   }
 
   &__inner {
     position: relative;
-    background: var(--background-input);
+    display: grid;
+    align-items: stretch;
+    border-radius: 0 0 var(--radius-small-inner) var(--radius-small-inner);
+    background: transparent;
   }
 
   &__input {
     position: relative;
     min-height: 16rem;
     padding: var(--editor-padding-block) var(--editor-padding-inline);
-    border: 1px solid var(--border-input);
+    border: 0;
     border-radius: var(--radius-small);
     outline: 0;
     tab-size: 4;
@@ -86,9 +105,6 @@ h1 {
 
 .rtl {
   text-align: right;
-}
-
-.editor-container {
 }
 
 .editor-inner {
