--- a/app/frontend/styles/new/variables.css
+++ b/app/frontend/styles/new/variables.css
@@ -271,6 +271,9 @@
   --radius-round: 100vmax;
   --radius-input-medium: var(--radius-small);
   --radius-input-small: var(--radius-small);
+  --radius-inside-small: calc(var(--radius-small) - var(--border-thin));
+  --radius-inside-medium: calc(var(--radius-medium) - var(--border-thin));
+  --radius-inside-large: calc(var(--radius-large) - var(--border-thin));
   --spacing-tiny: 0.25rem;
   --spacing-small: 0.5rem;
   --spacing-medium: 0.75rem;
