--- a/app/frontend/components/pages/admin/ActivityEditor/Presenters/Presenters.css
+++ b/app/frontend/components/pages/admin/ActivityEditor/Presenters/Presenters.css
@@ -19,10 +19,9 @@
 
     &__bio {
       grid-area: bio;
-
-      .editor__input {
-        min-height: 6rem;
-      }
+      min-height: 6rem;
+      max-height: 10rem;
+      resize: vertical;
     }
 
     &__picture {
