--- a/app/frontend/components/organisms/Search/Search.css
+++ b/app/frontend/components/organisms/Search/Search.css
@@ -41,7 +41,7 @@
 
   &__results {
     display: grid;
-    grid-template-columns: calc(var(--icon-medium) + var(--spacing-small)) 1fr;
+    grid-template-columns: calc(var(--icon-medium) + var(--spacing-tiny)) 1fr;
     align-content: start;
     overflow-y: auto;
     padding: var(--results-list-padding) var(--spacing-small);
